--- a/app/src/main/res/layout/activity_device.xml
+++ b/app/src/main/res/layout/activity_device.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.DeviceActivity">
+    tools:context="dev.benedek.syncthingandroid.activities.DeviceActivity">
 
     <include layout="@layout/widget_toolbar" />
 
