Device, QRScanner and Log Activity
- Migrate DeviceActivity to Kotlin
- Fix QRScannerActivity edge-to-edge behaviour
- Fix LogActivity crashing
- Fix LogActivity edge-to-edge behaviour

--- a/app/src/main/res/xml/app_settings.xml
+++ b/app/src/main/res/xml/app_settings.xml
@@ -200,7 +200,8 @@
             android:title="@string/open_log"
             android:summary="@string/open_log_summary">
             <intent
-                android:action=".activities.LogActivity" />
+                android:targetPackage="@string/app_package_id"
+                android:targetClass="dev.benedek.syncthingandroid.activities.LogActivity" />
         </Preference>
 
         <SwitchPreferenceCompat
