--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -33,8 +33,6 @@
         <item name="android:listViewStyle">@style/Widget.Syncthing.ListView</item>
         <item name="android:listDivider">@drawable/list_divider_inset</item>
 
-        <item name="android:actionBarSize">@dimen/abc_action_bar_default_height_material</item>
-
         <item name="android:spinnerStyle">@style/Widget.AppCompat.Spinner.Underlined</item>
         <item name="android:spinnerItemStyle">@style/Widget.Syncthing.TextView.SpinnerItem</item>
 
@@ -45,7 +43,7 @@
         </item>
         <item name="dialogCornerRadius">@dimen/dialog_corner_radius</item>
 
-        <item name="android:statusBarColor" tools:targetApi="m">@android:color/transparent</item>
+        <item name="android:statusBarColor" >@android:color/transparent</item>
         <item name="android:navigationBarColor">@android:color/transparent</item>
 
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
@@ -55,15 +53,8 @@
     </style>
 
     <style name="Theme.Syncthing" parent="Theme.Syncthing.Base">
-        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
+        <item name="android:windowLightStatusBar" >true</item>
         <item name="android:windowLightNavigationBar" tools:ignore="NewApi">true</item>
-    </style>
-
-    <style name="Theme.Syncthing.Translucent">
-        <item name="android:windowBackground">@android:color/transparent</item>
-        <item name="android:colorBackgroundCacheHint">@null</item>
-        <item name="android:windowIsTranslucent">true</item>
-        <item name="android:windowAnimationStyle">@android:style/Animation</item>
     </style>
 
     <!-- Dialog themes -->
@@ -74,10 +65,6 @@
         <item name="dialogCornerRadius">28dp</item>
     </style>
 
-    <!-- Button themes -->
-    <eat-comment />
-
-    <style name="Theme.Syncthing.ButtonStyle" parent="Widget.Material3.Button.TextButton.Dialog" />
 
     <!-- Preference dialog theme -->
     <eat-comment />
