Add custom material theme, fix a lot of stuff. Small things may be missing.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,151 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#03A9F4</color>
-    <color name="primary_dark">#0288D1</color>
-    <color name="divider">#1F000000</color>
+
 
     <color name="text_red">#ffff4444</color>
-    <color name="text_blue">#ff33b5e5</color>
     <color name="text_green">#ff99cc00</color>
 
+
+    <color name="md_theme_primary">#006194</color>
+    <color name="md_theme_onPrimary">#FFFFFF</color>
+    <color name="md_theme_primaryContainer">#007BBA</color>
+    <color name="md_theme_onPrimaryContainer">#FDFCFF</color>
+    <color name="md_theme_secondary">#006780</color>
+    <color name="md_theme_onSecondary">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer">#36B3D9</color>
+    <color name="md_theme_onSecondaryContainer">#004152</color>
+    <color name="md_theme_tertiary">#006389</color>
+    <color name="md_theme_onTertiary">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer">#007DAC</color>
+    <color name="md_theme_onTertiaryContainer">#FCFCFF</color>
+    <color name="md_theme_error">#BA1A1A</color>
+    <color name="md_theme_onError">#FFFFFF</color>
+    <color name="md_theme_errorContainer">#FFDAD6</color>
+    <color name="md_theme_onErrorContainer">#93000A</color>
+    <color name="md_theme_background">#F7F9FF</color>
+    <color name="md_theme_onBackground">#181C20</color>
+    <color name="md_theme_surface">#f7f9ff</color>
+    <color name="md_theme_onSurface">#1C1B1B</color>
+    <color name="md_theme_surfaceVariant">#E1E2E6</color>
+    <color name="md_theme_onSurfaceVariant">#45474A</color>
+    <color name="md_theme_outline">#75777B</color>
+    <color name="md_theme_outlineVariant">#C5C6CA</color>
+    <color name="md_theme_scrim">#000000</color>
+    <color name="md_theme_inverseSurface">#313030</color>
+    <color name="md_theme_inverseOnSurface">#F4F0EF</color>
+    <color name="md_theme_inversePrimary">#93CCFF</color>
+    <color name="md_theme_primaryFixed">#CCE5FF</color>
+    <color name="md_theme_onPrimaryFixed">#001D31</color>
+    <color name="md_theme_primaryFixedDim">#93CCFF</color>
+    <color name="md_theme_onPrimaryFixedVariant">#004B73</color>
+    <color name="md_theme_secondaryFixed">#B8EAFF</color>
+    <color name="md_theme_onSecondaryFixed">#001F28</color>
+    <color name="md_theme_secondaryFixedDim">#61D4FB</color>
+    <color name="md_theme_onSecondaryFixedVariant">#004D61</color>
+    <color name="md_theme_tertiaryFixed">#C5E7FF</color>
+    <color name="md_theme_onTertiaryFixed">#001E2D</color>
+    <color name="md_theme_tertiaryFixedDim">#80CFFF</color>
+    <color name="md_theme_onTertiaryFixedVariant">#004C6A</color>
+    <color name="md_theme_surfaceDim">#DDD9D9</color>
+    <color name="md_theme_surfaceBright">#f7f9ff</color>
+    <color name="md_theme_surfaceContainerLowest">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow">#F6F3F2</color>
+    <color name="md_theme_surfaceContainer">#F1EDEC</color>
+    <color name="md_theme_surfaceContainerHigh">#f7f9ff</color>
+    <color name="md_theme_surfaceContainerHighest">#E5E2E1</color>
+    <color name="md_theme_primary_mediumContrast">#00395A</color>
+    <color name="md_theme_onPrimary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_primaryContainer_mediumContrast">#0073AE</color>
+    <color name="md_theme_onPrimaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondary_mediumContrast">#003C4B</color>
+    <color name="md_theme_onSecondary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer_mediumContrast">#007794</color>
+    <color name="md_theme_onSecondaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiary_mediumContrast">#003A53</color>
+    <color name="md_theme_onTertiary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer_mediumContrast">#0075A1</color>
+    <color name="md_theme_onTertiaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_error_mediumContrast">#740006</color>
+    <color name="md_theme_onError_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_errorContainer_mediumContrast">#CF2C27</color>
+    <color name="md_theme_onErrorContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_background_mediumContrast">#F7F9FF</color>
+    <color name="md_theme_onBackground_mediumContrast">#181C20</color>
+    <color name="md_theme_surface_mediumContrast">#f7f9ff</color>
+    <color name="md_theme_onSurface_mediumContrast">#111111</color>
+    <color name="md_theme_surfaceVariant_mediumContrast">#E1E2E6</color>
+    <color name="md_theme_onSurfaceVariant_mediumContrast">#343639</color>
+    <color name="md_theme_outline_mediumContrast">#505356</color>
+    <color name="md_theme_outlineVariant_mediumContrast">#6B6D71</color>
+    <color name="md_theme_scrim_mediumContrast">#000000</color>
+    <color name="md_theme_inverseSurface_mediumContrast">#313030</color>
+    <color name="md_theme_inverseOnSurface_mediumContrast">#F4F0EF</color>
+    <color name="md_theme_inversePrimary_mediumContrast">#93CCFF</color>
+    <color name="md_theme_primaryFixed_mediumContrast">#0073AE</color>
+    <color name="md_theme_onPrimaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_primaryFixedDim_mediumContrast">#005989</color>
+    <color name="md_theme_onPrimaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixed_mediumContrast">#007794</color>
+    <color name="md_theme_onSecondaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixedDim_mediumContrast">#005D74</color>
+    <color name="md_theme_onSecondaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixed_mediumContrast">#0075A1</color>
+    <color name="md_theme_onTertiaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixedDim_mediumContrast">#005B7E</color>
+    <color name="md_theme_onTertiaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceDim_mediumContrast">#C9C6C5</color>
+    <color name="md_theme_surfaceBright_mediumContrast">#f7f9ff</color>
+    <color name="md_theme_surfaceContainerLowest_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow_mediumContrast">#F6F3F2</color>
+    <color name="md_theme_surfaceContainer_mediumContrast">#f7f9ff</color>
+    <color name="md_theme_surfaceContainerHigh_mediumContrast">#DFDCDC</color>
+    <color name="md_theme_surfaceContainerHighest_mediumContrast">#D4D1D0</color>
+    <color name="md_theme_primary_highContrast">#002F4B</color>
+    <color name="md_theme_onPrimary_highContrast">#FFFFFF</color>
+    <color name="md_theme_primaryContainer_highContrast">#004D77</color>
+    <color name="md_theme_onPrimaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondary_highContrast">#00313E</color>
+    <color name="md_theme_onSecondary_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer_highContrast">#005064</color>
+    <color name="md_theme_onSecondaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiary_highContrast">#003045</color>
+    <color name="md_theme_onTertiary_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer_highContrast">#004F6E</color>
+    <color name="md_theme_onTertiaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_error_highContrast">#600004</color>
+    <color name="md_theme_onError_highContrast">#FFFFFF</color>
+    <color name="md_theme_errorContainer_highContrast">#98000A</color>
+    <color name="md_theme_onErrorContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_background_highContrast">#F7F9FF</color>
+    <color name="md_theme_onBackground_highContrast">#181C20</color>
+    <color name="md_theme_surface_highContrast">#f7f9ff</color>
+    <color name="md_theme_onSurface_highContrast">#000000</color>
+    <color name="md_theme_surfaceVariant_highContrast">#E1E2E6</color>
+    <color name="md_theme_onSurfaceVariant_highContrast">#000000</color>
+    <color name="md_theme_outline_highContrast">#2A2C2F</color>
+    <color name="md_theme_outlineVariant_highContrast">#47494D</color>
+    <color name="md_theme_scrim_highContrast">#000000</color>
+    <color name="md_theme_inverseSurface_highContrast">#313030</color>
+    <color name="md_theme_inverseOnSurface_highContrast">#FFFFFF</color>
+    <color name="md_theme_inversePrimary_highContrast">#93CCFF</color>
+    <color name="md_theme_primaryFixed_highContrast">#004D77</color>
+    <color name="md_theme_onPrimaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_primaryFixedDim_highContrast">#003655</color>
+    <color name="md_theme_onPrimaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixed_highContrast">#005064</color>
+    <color name="md_theme_onSecondaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixedDim_highContrast">#003847</color>
+    <color name="md_theme_onSecondaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixed_highContrast">#004F6E</color>
+    <color name="md_theme_onTertiaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixedDim_highContrast">#00374E</color>
+    <color name="md_theme_onTertiaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceDim_highContrast">#BBB8B8</color>
+    <color name="md_theme_surfaceBright_highContrast">#f7f9ff</color>
+    <color name="md_theme_surfaceContainerLowest_highContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow_highContrast">#F4F0EF</color>
+    <color name="md_theme_surfaceContainer_highContrast">#E5E2E1</color>
+    <color name="md_theme_surfaceContainerHigh_highContrast">#D7D4D3</color>
+    <color name="md_theme_surfaceContainerHighest_highContrast">#C9C6C5</color>
 </resources>
+
