--- a/app/src/main/res/drawable/list_divider_inset.xml
+++ b/app/src/main/res/drawable/list_divider_inset.xml
@@ -2,7 +2,7 @@
 <inset xmlns:android="http://schemas.android.com/apk/res/android"
     android:insetLeft="@dimen/material_divider_inset">
     <shape>
-        <solid android:color="@color/divider" />
+        <solid android:color="@color/md_theme_outline" />
         <size android:height="1px" />
     </shape>
 </inset>
